openapi update for card endpoint
